--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,16 +15,18 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.17
+          go-version: 1.22
 
       - name: Build Bird API
         run: |
           cd apis/bird
+          go mod tidy
           go build -v ./...
 
       - name: Test Bird API
         run: |
           cd apis/bird
+          go mod tidy
           go test -v ./...
 
       - name: Build BirdImage API
