--- a/bird-app-infra/kubernetes/birdimage-api/deployment.yaml
+++ b/bird-app-infra/kubernetes/birdimage-api/deployment.yaml
@@ -17,6 +17,18 @@ spec:
           image: lilithvengeance/birdimage-api:latest
           ports:
             - containerPort: 4200
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 4200
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 4200
+            initialDelaySeconds: 15
+            periodSeconds: 10
           resources:
             limits:
               cpu: "0.5"
