--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,7 +57,7 @@ jobs:
           context: ./apis/bird
           file: ./apis/bird/Dockerfile.bird-api
           push: true
-          tags: lilithvengeance/bird-api:latest
+          tags: lilithvengeance/bird-api:${{ github.sha }}
 
       - name: Build and push BirdImage API
         uses: docker/build-push-action@v6
@@ -65,4 +65,23 @@ jobs:
           context: ./apis/birdImage
           file: ./apis/birdImage/Dockerfile.birdimage-api
           push: true
-          tags: lilithvengeance/birdimage-api:latest
+          tags: lilithvengeance/birdimage-api:${{ github.sha }}
+
+  update-k8s-manifests:
+    needs: docker-build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Update Kubernetes manifests
+        run: |
+          sed -i 's|lilithvengeance/bird-api:.*|lilithvengeance/bird-api:${{ github.sha }}|' kubernetes/bird-api/deployment.yaml
+          sed -i 's|lilithvengeance/birdimage-api:.*|lilithvengeance/birdimage-api:${{ github.sha }}|' kubernetes/birdimage-api/deployment.yaml
+
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add kubernetes/bird-api/deployment.yaml kubernetes/birdimage-api/deployment.yaml
+          git commit -m "Update image tags to ${{ github.sha }}"
+          git push
