--- a/bird-app-infra/package.json
+++ b/bird-app-infra/package.json
@@ -13,15 +13,22 @@
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
+    "aws-cdk": "2.103.0",
+    "aws-cdk-lib": "2.x",
+    "constructs": "10.x",
+    "esbuild": "^0.14.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.103.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "~4.9.0"
   },
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.0.0",
+    "@aws-sdk/client-secrets-manager": "^3.0.0",
     "aws-cdk-lib": "2.103.0",
+    "aws-sdk": "^2.1691.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "v8": "^0.1.0"
   }
 }
