--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,7 @@ jobs:
           push: true
           tags: lilithvengeance/birdimage-api:${{ github.sha }}
 
-  update-k8s-manifests:
+  update-helm-chart:
     needs: docker-build-and-push
     runs-on: ubuntu-latest
     steps:
@@ -75,15 +75,88 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Update Kubernetes manifests
+      - name: Update Helm chart values
         run: |
-          sed -i 's|lilithvengeance/bird-api:.*|lilithvengeance/bird-api:${{ github.sha }}|' bird-app-infra/kubernetes/bird-api/deployment.yaml
-          sed -i 's|lilithvengeance/birdimage-api:.*|lilithvengeance/birdimage-api:${{ github.sha }}|' bird-app-infra/kubernetes/birdimage-api/deployment.yaml
+          sed -i 's|tag: .*|tag: "${{ github.sha }}"|' helm/values.yaml
+          sed -i 's|tag: .*|tag: "${{ github.sha }}"|' helm/values.yaml
 
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add bird-app-infra/kubernetes/bird-api/deployment.yaml bird-app-infra/kubernetes/birdimage-api/deployment.yaml
-          git commit -m "Update image tags to ${{ github.sha }}"
+          git add helm/values.yaml
+          git commit -m "Update Helm chart image tags to ${{ github.sha }}"
           git push
+
+  deploy-infrastructure:
+    needs: update-helm-chart
+    runs-on: ubuntu-latest
+    outputs:
+      master_ip: ${{ steps.get_master_ip.outputs.master_ip }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Install dependencies
+        run: |
+          cd bird-app-infra
+          npm ci
+
+      - name: Build CDK app
+        run: |
+          cd bird-app-infra
+          npm run build
+
+      - name: Deploy with CDK
+        run: |
+          cd bird-app-infra
+          npx cdk deploy --require-approval never
+
+      - name: Get Master Node IP
+        id: get_master_ip
+        run: |
+          MASTER_IP=$(aws cloudformation describe-stacks --stack-name BirdInfraStack --query "Stacks[0].Outputs[?ExportName=='MasterNodePublicIP'].OutputValue" --output text)
+          echo "master_ip=$MASTER_IP" >> $GITHUB_OUTPUT
+
+  update-argocd:
+    needs: deploy-infrastructure
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Get EC2 Private Key
+        run: |
+          PRIVATE_KEY=$(aws secretsmanager get-secret-value --secret-id k3s-private-key --query SecretString --output text)
+          echo "$PRIVATE_KEY" > k3s_private_key.pem
+          chmod 600 k3s_private_key.pem
+
+      - name: Add EC2 instance to known hosts
+        run: ssh-keyscan -H ${{ needs.deploy-infrastructure.outputs.master_ip }} >> ~/.ssh/known_hosts
+
+      - name: Fetch kubeconfig from EC2 instance
+        run: |
+          ssh -i k3s_private_key.pem ubuntu@${{ needs.deploy-infrastructure.outputs.master_ip }} 'sudo cat /etc/rancher/k3s/k3s.yaml' > kubeconfig
+          sed -i 's/127.0.0.1/${{ needs.deploy-infrastructure.outputs.master_ip }}/g' kubeconfig
+          echo "KUBECONFIG=$PWD/kubeconfig" >> $GITHUB_ENV
+
+      - name: Update ArgoCD application
+        run: |
+          kubectl apply -f bird-app-infra/argocd/application.yaml
