--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@ birdApi:
   image:
     repository: lilithvengeance/bird-api
     pullPolicy: IfNotPresent
-    tag: "7ed0941193fb23fdf864ff5e8af9e3a1b8c712d4"
+    tag: "latest"
   service:
     type: LoadBalancer
     port: 80
@@ -14,7 +14,7 @@ birdImageApi:
   image:
     repository: lilithvengeance/birdimage-api
     pullPolicy: IfNotPresent
-    tag: "7ed0941193fb23fdf864ff5e8af9e3a1b8c712d4"
+    tag: "latest"
   service:
     type: LoadBalancer
     port: 80
